--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "swiper": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
